# language_graph

./: .gitignore  README.md  pyproject.toml  russian_library_scraping.py  scraping_practice.py  selenium_practice.py  word_practice.py
Test/TestLanguageProcessor/: test_russian_functions.py
src/LanguageProcessor/: russian_functions.py
src/data/: russian_library_scraping.py
